--- a/index.html
+++ b/index.html
@@ -139,16 +139,6 @@
             </div>
             <div class="col">
               <a href="project.html" class="cs_service cs_style_1 cs_parallax_mousemove_scene">
-                <h4 class="cs_service_title cs_primary_color cs_font_25 mb-0 cs_normal">Fashion Show</h4>
-                <div class="cs_service_thumbnail cs_parallax_mousemove_follow">
-                  <img class="h-100 w-100" src="assets/img/portfolio/Fashion Show.png" alt="service1">
-                </div>
-                <div class="cs_service_icon">
-                  <img src="assets/img/icons/arrow.svg" alt="arrow">
-                </div>
-              </a>
-            </div><div class="col">
-              <a href="project.html" class="cs_service cs_style_1 cs_parallax_mousemove_scene">
                 <h4 class="cs_service_title cs_primary_color cs_font_25 mb-0 cs_normal">Digital Poster</h4>
                 <div class="cs_service_thumbnail cs_parallax_mousemove_follow">
                   <img class="h-100 w-100" src="assets/img/portfolio/Digital Poster.png" alt="service1">
@@ -172,26 +162,6 @@
                 <h4 class="cs_service_title cs_primary_color cs_font_25 mb-0 cs_normal">Puisi</h4>
                 <div class="cs_service_thumbnail cs_parallax_mousemove_follow">
                   <img class="h-100 w-100" src="assets/img/portfolio/Puisi.png" alt="service1">
-                </div>
-                <div class="cs_service_icon">
-                  <img src="assets/img/icons/arrow.svg" alt="arrow">
-                </div>
-              </a>
-            </div><div class="col">
-              <a href="project.html" class="cs_service cs_style_1 cs_parallax_mousemove_scene">
-                <h4 class="cs_service_title cs_primary_color cs_font_25 mb-0 cs_normal">Makeup Competition</h4>
-                <div class="cs_service_thumbnail cs_parallax_mousemove_follow">
-                  <img class="h-100 w-100" src="assets/img/portfolio/Make up.png" alt="service1">
-                </div>
-                <div class="cs_service_icon">
-                  <img src="assets/img/icons/arrow.svg" alt="arrow">
-                </div>
-              </a>
-            </div><div class="col">
-              <a href="project.html" class="cs_service cs_style_1 cs_parallax_mousemove_scene">
-                <h4 class="cs_service_title cs_primary_color cs_font_25 mb-0 cs_normal">Pageant</h4>
-                <div class="cs_service_thumbnail cs_parallax_mousemove_follow">
-                  <img class="h-100 w-100" src="assets/img/portfolio/Pageant.png" alt="service1">
                 </div>
                 <div class="cs_service_icon">
                   <img src="assets/img/icons/arrow.svg" alt="arrow">
@@ -394,6 +364,70 @@
       <div class="cs_height_200 cs_height_lg_65"></div>
     </section>
     <!-- End Portfolio Section -->
+    <section class="section mt-5" id="clients">
+      <div class="container">
+          <h2 style="text-align: center;">Sponsors</h2>
+          <!-- start brand logo -->
+          <div class="row mt-5">
+              <div class="col-lg-3 col-sm-3">
+                  <div class="client-images">
+                      <img src="assets/img/sponsor/logo hokben 1.png" width="200" alt="client-img" class="mx-auto img-fluid d-block" />
+                  </div>
+              </div>
+              <div class="col-lg-3 col-sm-3">
+                  <div class="client-images">
+                      <img src="assets/img/sponsor/Logo Laurier PNG.png" alt="client-img" class="mx-auto img-fluid d-block" />
+                  </div>
+              </div>
+              <div class="col-lg-3 col-sm-3">
+                  <div class="client-images">
+                      <img src="assets/img/sponsor/Logo Sponsor-Nivea.png" width="200" alt="client-img" class="mx-auto img-fluid d-block" />
+                  </div>
+              </div>
+              <div class="col-lg-3 col-sm-3">
+                  <div class="client-images">
+                      <img src="assets/img/sponsor/LOGO SPONSOR_ARTOTEL.png" alt="client-img" class="mx-auto img-fluid d-block" />
+                  </div>
+              </div>
+              <div class="col-lg-3 col-sm-3">
+                <div class="client-images">
+                    <img src="assets/img/sponsor/LOGO SPONSOR_INTIWHIZ.png" alt="client-img" class="mx-auto img-fluid d-block" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-3">
+              <div class="client-images">
+                  <img src="assets/img/sponsor/LOGO SPONSOR_JNE.png" alt="client-img" class="mx-auto img-fluid d-block" />
+              </div>
+          </div>
+          <div class="col-lg-3 col-sm-3">
+            <div class="client-images">
+                <img src="assets/img/sponsor/Logo SPONSOR_LAURIER.png" alt="client-img" class="mx-auto img-fluid d-block" />
+            </div>
+        </div>
+        <div class="col-lg-3 col-sm-3">
+          <div class="client-images">
+              <img src="assets/img/sponsor/LOGO SPONSOR_VSOY.png" height="150" alt="client-img" class="mx-auto img-fluid d-block" />
+          </div>
+      </div>
+      <div class="col-lg-3 col-sm-3">
+        <div class="client-images">
+            <img src="assets/img/sponsor/PANA LOGO.png" alt="client-img" class="mx-auto img-fluid d-block" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-3">
+        <div class="client-images">
+            <img src="assets/img/sponsor/Photo from lila.jpg" alt="client-img" class="mx-auto img-fluid d-block" />
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-3">
+        <div class="client-images">
+            <img src="assets/img/sponsor/TEKKO.jpeg" alt="client-img" class="mx-auto img-fluid d-block" />
+        </div>
+      </div>
+          <!-- end row -->
+      </div>
+      <!-- end container -->
+  </section>
     <!-- Start Values Section -->
   </main>
   <!-- Start Footer Section -->
